fix: ensure text wraps instead of overflow

--- a/themes/custom/az_barrio/css/style.css
+++ b/themes/custom/az_barrio/css/style.css
@@ -789,4 +789,5 @@ form.webform-submission-form {
 .align-left ~ ul,
 .align-left ~ ol {
   overflow: auto;
+  overflow-wrap: anywhere;
 }
